# hyak_cursor_demo_june_2

./: README.md
containers/: apptainer.def
misc/: Cursor.pptx  notes.md  pyproject.toml
notebooks/: demo.ipynb
scripts/: execute_all_slurms.py  generate_slurms.py  make_file.py
